--- a/src/sass/_library-header.scss
+++ b/src/sass/_library-header.scss
@@ -1,7 +1,7 @@
 .section--library {
   margin: 0 auto;
   background: $gray;
-  background-image: url('../images/library/library-m.webp'); /* fallback */
+  background-image: url('../images/library/library-m.webp'); 
   background-image: linear-gradient(rgba(0 0 0 / 0.56), rgba(0 0 0 / 0.56)),
     url('../images/library/library-m.webp');
   background-repeat: no-repeat;
